@@ -24,7 +24,11 @@
  * OF THIS SOFTWARE.
  *
  * $Log: proto.h,v $
- * Revision 1.42  1998-03-20 14:46:06  adam
+ * Revision 1.43  1998-03-31 11:07:45  adam
+ * Furhter work on UNIverse resource report.
+ * Added Extended Services handling in frontend server.
+ *
+ * Revision 1.42  1998/03/20 14:46:06  adam
  * Added UNIverse Resource Reports.
  *
  * Revision 1.41  1998/02/10 15:31:52  adam
@@ -1388,8 +1392,8 @@ YAZ_EXPORT int z_Query(ODR o, Z_Query **p, int opt);
 #include <prt-esp.h>
 #include <prt-add.h>
 
-#include <prt-ext.h>
 #include <prt-dat.h>
 #include <prt-univ.h>
+#include <prt-ext.h>
 
 #endif
